# fgo-streamlit

./: README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
components/: __init__.py  refund.py
data/: fgo.db
data/static/: ce_names.json  game_basic.py  svt_names.json
migrations/: env.py
migrations/versions/: 2e08288cb072_update_supports_add_pkeys.py  3284fd5dff8b_add_func_target_type.py  3af4098aea65_add_ce.py  58e1a9927420_update_supports.py  7065f68cf2aa_update_buffs.py  8c9fa7164aa4_recreate_buff_table.py  c300e962b967_initial_schema.py  dc3feb499724_delete_old_buff_table.py  fe3890ca251c_add_atk_to_looper.py
pages/: fgo_ranking.html  home.py  refund.py  shuffle.py  style.css
src/: action.py  calculator.py  data_loader.py  model.py  mysql.py  scraping.py  sync.py  utils.py
